# SOM

./: .editorconfig  LICENSE  README.md  main.py  pyproject.toml
core/: animation.py  network.py  util.py
scripts/: build.ps1
